Add training kpis monitor panel #374
CHANGELOG.md
    fixed octave report
    reviewed kpis
    Added kpis frame to wheelly
    pack all frames
    report.cmd and drop out randomized model